# swagger/swagger.yml
@@ -42,8 +42,8 @@ paths:
     get:
       tags:
       - github.com/udistrital/planeacion_evaluacion_mid/controllersEvaluacionController
-      description: get Avance de Unidad
-      operationId: EvaluacionController.GetAvance
+      description:  Avance de Unidad
+      operationId: EvaluacionController.Avances
       parameters:
       - in: path
         name: plan
@@ -92,7 +92,7 @@ paths:
       tags:
       - github.com/udistrital/planeacion_evaluacion_mid/controllersEvaluacionController
       description: get Planes que se pueden evaluar
-      operationId: EvaluacionController.GetPlanesAEvaluar
+      operationId: EvaluacionController.PlanesAEvaluar
       responses:
         "200":
           description: ""
